# self-improvement-app

./: .flake8  .gitignore  Dockerfile  Makefile  docker-compose-ci.yaml  docker-compose.yaml  pyproject.toml
app/: app.py
app/application/: api.py  namespaces.py  routes.py
app/application/enums/: release_type.py
app/application/models/: __init__.py  artist.py  base_model.py  collection.py  release.py  role.py  user.py
app/application/serializers/: artist.py  collection.py  release.py  user.py
app/application/services/: release.py  user.py
app/application/types/: __init__.py  artist.py  collection.py  release.py  user.py
app/application/views/: artist.py  collection.py  release.py  user.py
app/migrations/: env.py
app/migrations/versions/: 0667bbc320f2_initial_migration.py  10075ef4eb2d_.py  7239c1087f1d_login.py  91e634d0eacc_add_roles.py  f505c33a8bd6_release_collection_artist.py
app/tests/: conftest.py
app/tests/authorization/: test_authorization.py
app/tests/user/: test_user_collection.py  test_user_session.py
