[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["jan <jan.wnek@stxnext.pl>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
flask-restx = "^1.3.0"
Flask-Migrate = "^4.0.7"
Flask-SQLAlchemy = "^3.1.1"
flask-login = "^0.6.3"
pre-commit = "^3.8.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=80
force-exclude="app/migrations"
preview=true
enable-unstable-feature=['string_processing']
[tool.isort]
line_length=80
profile = "black"
multi_line_output = 3
skip="app/migrations"
